# zwidget

./: CMakeLists.txt  design principles.md  future roadmap.md
.cache/clangd/index/: align.hpp.A514ED6E025DA809.idx  button.hpp.27A74A9F7A1ECAD0.idx  canvas.hpp.A65DBC672E9E8FAA.idx  checkbox.hpp.1E2D43F543A03626.idx  color.hpp.39BD20EB3FA5DA6D.idx  context.cpp.110518646C729B67.idx  context.hpp.2F56DFE2CCBCA6DF.idx  context.hpp.4DD323878BD71C8B.idx  event.hpp.1BF98C45D05574AE.idx  event_dispatcher.hpp.BEB2CAECDF24C115.idx  keyboard.hpp.5E894EAB064D149C.idx  keymod.hpp.2246482A8CE74DD5.idx  label.hpp.AA26FC6F602BDB9E.idx  layout.hpp.1F0B1DCADA14DD03.idx  main.cpp.91398C9AD18968A4.idx  mouse.hpp.A061EB80FA04413A.idx  numeric.hpp.3F84AE5F2B627B68.idx  point.hpp.ED37A7251BBC5B04.idx  rect.hpp.03763134931F07AA.idx  size.hpp.39FE97CA904798CB.idx  textbox.hpp.B76CB246265B6E15.idx  widget.hpp.91A17F7738279A4E.idx  window.cpp.28F9ACDE7B287CB4.idx  window.cpp.420C97C139A18612.idx  window.hpp.456ECED260740259.idx  window.hpp.8696B29CAF970AE1.idx
include/zwidget/concept/: numeric.hpp
include/zwidget/core/: event_dispatcher.hpp  widget.hpp  window.hpp
include/zwidget/modules/: window.cpp
include/zwidget/modules/render/d2d/: context.cpp
include/zwidget/render/: canvas.hpp  context.hpp
include/zwidget/render/d2d/: context.hpp
include/zwidget/unit/: align.hpp  color.hpp  composer.hpp  endian.hpp  event.hpp  generic.hpp  handle.hpp  point.hpp  rect.hpp  size.hpp  typelist.hpp
include/zwidget/unit/event/: keyboard.hpp  keymod.hpp  mouse.hpp  window.hpp
include/zwidget/widgets/: button.hpp  checkbox.hpp  label.hpp  layout.hpp  slider.hpp  textbox.hpp
src/: main.cpp
